shadows and added latex support

--- a/coding/laws/index.html
+++ b/coding/laws/index.html
@@ -6,10 +6,15 @@
 <meta name="description" content="A Note Taking Blog For Bac info 2022">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css">
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js"
+    onload="renderMathInElement(document.body);"></script>
 
 
 
-<link rel="stylesheet" href="/css/main.min.9cde050689769d19dc720c075f05dcb0b5b5f667cdb43dcbbeed9c88843cf7f7.css" integrity="sha256-nN4FBol2nRnccgwHXwXcsLW19mfNtD3Lvu2ciIQ89/c=" />
+
+<link rel="stylesheet" href="/css/main.min.218fe395d82adbb539237efaa45bdd1143061f0c97174375ce78fa8e09021d8a.css" integrity="sha256-IY/jldgq27U5I376pFvdEUMGHwyXF0N1znj6jgkCHYo=" />
 
 <title>Jendouba Computer Science Bac 2022</title>
 
@@ -18,7 +23,7 @@
         display: block;
     }
 </style>
-<header class="lg:px-16 px-6 bg-white flex flex-wrap items-center lg:py-0 py-2">
+<header class="lg:px-16 px-6 bg-white flex flex-wrap items-center lg:py-0 py-2 shadow-md">
     <div class="flex-1 flex justify-between items-center">
         <a href="/">
             <i class="fa fa-fire" aria-hidden="true"></i>
@@ -68,7 +73,7 @@
         </nav>
     </div>
 
-</header><div class="content">
+</header><div class="">
 <div>
     <h1>Laws</h1>
     
